--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ra'fat Ahmad Profile</title>
+    <title>Ra'fat's Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
@@ -10,14 +10,14 @@
   <body>
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Ra'fat Ahmad</li>
+          <li class="name">Ra'fat B. Ahmad</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header id="exp">
-      <img src="images/re.png" alt="Drawing of Ra'fat Ahmad" class="profile-image">
+      <img src="images/re.png" alt="resume avatar" class="profile-image CV_image">
       <h1 class="tag name">Ra'fat's Resume.</h1>
       <p class="tag location">Here you can find everything about my CV</p>
     </header>
