--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Ra'fat Ahmad</li>
+          <li class="name">Ra'fat B. Ahmad</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
@@ -41,6 +41,7 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
+        <img src="images/goals.png" alt="goals">
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div>
 
