edit for new submation

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>React</li>
+          <li>Node.js</li>
         </ul>
         <img src="images/goals.png" alt="goals">
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a web design for helping clients create an impressive online presence.</p>
       </div>
 
     </main>
@@ -51,7 +51,7 @@
         <li><a href="https://linkedin.com/in/rafatahmad" target="_blank" class="social linkedin">LinkedIn</a></li>
         <li><a href="https://github.com/RafatBAhmad" target="_blank" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2019, Ra'fat Ahmad</p>
+      <p class="copyright">Copyright 2021, Ra'fat Ahmad</p>
     </footer>
   </body>
   </html>
